[build-system]
build-backend = "poetry_dynamic_versioning.backend"
requires = [
  "poetry-core@ git+https://github.com/radoering/poetry-core.git@pep621-support",
  "poetry-dynamic-versioning",
]

[project]
name = "tap-betterstack"
description = "`tap-betterstack` is a Singer tap for Better Stack, built with the Meltano SDK for Singer Taps."
readme = "README.md"
keywords = [
  "Better Stack",
  "ELT",
  "singer.io",
]
license.file = "LICENSE"
authors = [{ name = "Edgar Ramírez-Mondragón", email = "edgarrm358@gmail.com" }]
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dynamic = [
  "version",
]
dependencies = [
  "singer-sdk~=0.37.0",
]
urls.Documentation = "https://github.com/edgarrmondragon/tap-betterstack#readme"
urls.Homepage = "https://github.com/edgarrmondragon/tap-betterstack"
urls.Repository = "https://github.com/edgarrmondragon/tap-betterstack"
scripts."tap-betterstack" = "tap_betterstack.tap:TapBetterStack.cli"

[tool.poetry]
name = "tap-betterstack"
version = "0.0.0"

[tool.poetry.group.dev.dependencies]
singer-sdk = {version = "*", extras = ["testing"]}

[tool.poetry-dynamic-versioning]
enable = true
format-jinja = """
    {%- if distance == 0 -%}
        {{ serialize_pep440(base, stage, revision) }}
    {%- elif revision is not none -%}
        {{ serialize_pep440(base, stage, revision + 1, dev=distance, metadata=[commit]) }}
    {%- else -%}
        {{ serialize_pep440(bump_version(base), stage, revision, dev=distance, metadata=[commit]) }}
    {%- endif -%}
"""
metadata = true
style = "pep440"
vcs = "git"

[tool.ruff]
line-length = 88
src = ["tap_betterstack", "tests"]
target-version = "py38"

[tool.ruff.lint]
ignore = [
  "ANN101",  # missing-type-self
  "DJ",      # flake8-django
  "FIX002",  # line-contains-todo
  "COM812",  # missing-trailing-comma
  "ISC001",  # single-line-implicit-string-concatenation
]
select = ["ALL"]
unfixable = [
  "ERA001",  # commented-out-code
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.per-file-ignores]
"noxfile.py" = ["ANN"]
"tests/*" = [
  "ANN201",  # missing-return-type-public-function
  "S101",    # assert
  "SLF001",  # private-member-access
]

[tool.ruff.lint.isort]
known-first-party = ["tap_betterstack"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
addopts = "-vvv"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["backoff.*"]
